--- a/calculator/src/App/Calculator/Calculator.css
+++ b/calculator/src/App/Calculator/Calculator.css
@@ -1,16 +1,4 @@
-html {
-    box-sizing: border-box;
-  }
-  *, *:before, *:after {
-    box-sizing: inherit;
-  }
-  
-  body {
-    margin: 0;
-    font: 100 14px 'Roboto';
-  }
-  
-  button {
+ button {
     display: block;
     background: none;
     border: none;
@@ -35,16 +23,10 @@ html {
     justify-content: center;
   }
   
-  #app {
-    width: 320px;
-    height: 520px;
-    position: relative;
-  }
-  
   .calculator {
     width: 100%;
     height: 100%;
-    background: black;
+    /* background: black; */
     
     display: flex;
     flex-direction: column;
