--- a/ageteller/src/components/App.css
+++ b/ageteller/src/components/App.css
@@ -3,3 +3,22 @@
     text-align: center;
     font-size: 16px;
 }
+
+.Geek {
+    width: 500px;
+    height: 400px;
+}
+
+.Fade {
+    animation-name: fade-in;
+    animation-duration: 2s;
+}
+
+.age-stats {
+    opacity: 100;
+}
+
+@keyframes fade-in {
+    from { opacity: 0 }
+    to { opacity: 100; }
+}
